--- a/app/src/main/res/layout/fragment_shipment.xml
+++ b/app/src/main/res/layout/fragment_shipment.xml
@@ -2,73 +2,121 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- APP BAR LAYOUT START -->
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/color_primary"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <!-- APP BAR LAYOUT START -->
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/color_primary"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/topInfoDash"
-                    android:layout_width="@dimen/width_0"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    app:layout_constraintVertical_bias="0.2"
-                    app:layout_constraintStart_toEndOf="@id/guidelineAppBarStart"
-                    app:layout_constraintEnd_toStartOf="@id/guidelineAppBarEnd"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:id="@+id/profileImage"
-                        android:layout_width="@dimen/width_30"
-                        android:layout_height="@dimen/height_30"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        android:src="@drawable/arrow_back"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/guidelineTopAppBarImageEnd"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/topInfoDash"
+                        android:layout_width="@dimen/width_0"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2"
+                        app:layout_constraintVertical_bias="0.2"
+                        app:layout_constraintStart_toEndOf="@id/guidelineAppBarStart"
+                        app:layout_constraintEnd_toStartOf="@id/guidelineAppBarEnd"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        />
+                        app:layout_constraintBottom_toBottomOf="parent">
 
-                    <TextView
-                        style="@style/Widget.TextView.BodyMedium16"
-                        android:text="@string/shipment_history"
-                        android:textColor="@color/app_bar_icon_text_color"
-                        app:layout_constraintHorizontal_bias="0.5"
-                        app:layout_constraintVertical_bias="0.5"
-                        app:layout_constraintStart_toStartOf="parent"
+                        <ImageView
+                            android:id="@+id/backArrow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            android:src="@drawable/arrow_back"
+                            android:paddingTop="@dimen/padding_10"
+                            android:paddingBottom="@dimen/padding_10"
+                            android:paddingEnd="@dimen/padding_10"
+                            android:paddingStart="@dimen/width_0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/guidelineTopAppBarImageEnd"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            />
+
+                        <TextView
+                            style="@style/Widget.TextView.BodyMedium16"
+                            android:textSize="@dimen/subtitle_text_size_18"
+                            android:text="@string/shipment_history"
+                            android:textColor="@color/white"
+                            app:layout_constraintHorizontal_bias="0.5"
+                            app:layout_constraintVertical_bias="0.5"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+                        <androidx.constraintlayout.widget.Guideline
+                            android:id="@+id/guidelineTopAppBarImageEnd"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            app:layout_constraintGuide_percent="0.10" />
+
+
+                        <androidx.constraintlayout.widget.Guideline
+                            android:id="@+id/guidelineTopAppBarEnd"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            app:layout_constraintGuide_percent="@integer/guidelineEnd" />
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/actionTabs"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_30"
+                        app:tabIndicatorColor="@color/color_secondary"
+                        app:tabSelectedTextColor="@color/white"
+                        app:tabTextColor="@color/color_primary_two"
+                        app:tabIndicatorAnimationMode="linear"
+                        app:tabMode="scrollable"
+                        app:tabTextAppearance="@style/Widget.CustomTabLayout"
+                        app:tabBackground="@color/color_primary"
+                        app:layout_constraintVertical_bias="0.1"
+                        app:layout_constraintTop_toBottomOf="@id/topInfoDash"
+                        app:layout_constraintStart_toEndOf="@id/guidelineAppBarStart"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
+
                     <androidx.constraintlayout.widget.Guideline
-                        android:id="@+id/guidelineTopAppBarImageEnd"
+                        android:id="@+id/guidelineAppBarStart"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.10" />
+                        app:layout_constraintGuide_begin="21dp" />
 
 
                     <androidx.constraintlayout.widget.Guideline
-                        android:id="@+id/guidelineTopAppBarEnd"
+                        android:id="@+id/guidelineAppBarEnd"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -76,55 +124,50 @@
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-                
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tabLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_20"
-                    android:layout_marginBottom="@dimen/margin_20"
-                    app:tabIndicatorColor="@color/color_secondary"
-                    app:tabSelectedTextColor="@color/white"
-                    app:tabTextColor="@color/color_primary_two"
-                    app:tabIndicatorAnimationMode="linear"
-                    app:tabMode="scrollable"
-                    app:layout_constraintVertical_bias="0.1"
-                    app:layout_constraintTop_toBottomOf="@id/topInfoDash"
-                    app:layout_constraintStart_toEndOf="@id/guidelineAppBarStart"
-                    app:layout_constraintEnd_toEndOf="parent"
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <!-- APP BAR LAYOUT END -->
+
+            <LinearLayout
+                android:id="@+id/shipmentLinear"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <!-- SHIPMENT START -->
+                <TextView
+                    android:id="@+id/tracking"
+                    style="@style/Widget.TextView.BodyMedium16"
+                    android:text="@string/shipments"
+                    android:textColor="@color/body_text_color"
+                    android:textSize="@dimen/title_text_size_20"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:layout_marginStart="@dimen/margin_15"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@id/guidelineStart"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.03" />
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/margin_10"
+                    app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+                    app:layout_constraintStart_toEndOf="@id/guidelineStart"
+                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                     app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guidelineAppBarStart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintGuide_begin="21dp" />
+            </LinearLayout>
 
 
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guidelineAppBarEnd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintGuide_percent="@integer/guidelineEnd" />
+        </LinearLayout>
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <!-- APP BAR LAYOUT END -->
-        
-        <androidx.viewpager2.widget.ViewPager2
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-            app:layout_constraintStart_toEndOf="@id/guidelineStart"
-            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
-            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 
@@ -146,6 +189,6 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="@integer/guidelineEnd" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
