--- a/app/src/main/res/layout/item_search_items_recycler_design.xml
+++ b/app/src/main/res/layout/item_search_items_recycler_design.xml
@@ -10,6 +10,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/recyclerCardHolder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/padding_10">
@@ -17,7 +18,7 @@
         <ImageView
             android:layout_width="@dimen/width_30"
             android:layout_height="@dimen/height_30"
-            android:src="@drawable/sender_icon"
+            android:src="@drawable/package_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guidelineImageEnd"
             app:layout_constraintHorizontal_bias="0.0"
@@ -39,7 +40,7 @@
 
             <TextView
                 style="@style/Widget.TextView.BodyRegular14"
-                android:textColor="@color/body_text_color"
+                android:textColor="@color/body_text_color_two"
                 android:text="@{searchItems.searchItemName}"
                 tools:text="Macbook pro M2" />
 
