--- a/app/src/main/res/layout/item_shipment_recycler_design.xml
+++ b/app/src/main/res/layout/item_shipment_recycler_design.xml
@@ -10,9 +10,12 @@
     </data>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/recyclerCardHolder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/radius_10"
+        android:layout_marginStart="@dimen/margin_5"
+        android:layout_marginEnd="@dimen/margin_5"
         app:cardBackgroundColor="@color/white"
         android:layout_marginTop="@dimen/margin_10"
         android:layout_marginBottom="@dimen/margin_10">
@@ -47,8 +50,8 @@
                     >
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/width_20"
+                        android:layout_height="@dimen/height_20"
                         app:loadImage="@{shipmentDetails.shipmentStatusIcon}"
                         tools:src="@drawable/progress"
                         android:layout_gravity="center_vertical"/>
@@ -56,9 +59,12 @@
                     <TextView
                         style="@style/Widget.TextView.BodyMedium16"
                         android:textSize="@dimen/caption_text_size_12"
-                        android:text="@{shipmentDetails.shipmentStatus}"
+                        app:shipmentStatus="@{shipmentDetails.shipmentStatus}"
                         tools:text="@string/in_progress"
+                        android:textStyle="bold"
                         tools:textColor="@color/green_ish"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="@dimen/margin_3"
                         />
 
 
@@ -133,9 +139,10 @@
             </LinearLayout>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/box_shadow"
+                android:layout_width="@dimen/width_100"
+                android:layout_height="@dimen/height_100"
+                android:src="@drawable/box_shadow_two"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@id/guidelineCardMiddle"
                 app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                 app:layout_constraintTop_toTopOf="parent"
