--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#4a3392</color>
+    <color name="color_primary">#4B3391</color>
     <color name="color_primary_two">#706588</color>
     <color name="color_secondary">#F37118</color>
     <color name="color_secondary_opacity">#c89263</color>
     <color name="body_text_color">#232a3b</color>
-    <color name="body_text_color_two">#d6d6d6</color>
+    <color name="body_text_color_two">#25282E</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
@@ -33,7 +33,7 @@
     <color name="blue_ish">#b4dafb</color>
     <color name="purple_ish">#706588</color>
     <color name="app_bar_icon_text_color">#d2c6e0</color>
-    <color name="search_text_color">#bfbfbf</color>
+    <color name="search_text_color">#9A9A9A</color>
     <color name="caption_text_color">#b2b2b2</color>
     <color name="box_color">#f4f9fc</color>
 </resources>
