--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,6 +49,8 @@
     <dimen name="width_110">110dp</dimen>
     <dimen name="width_120">120dp</dimen>
     <dimen name="width_150">150dp</dimen>
+    <dimen name="width_20">20dp</dimen>
+    <dimen name="width_25">25dp</dimen>
     <dimen name="width_30">30dp</dimen>
     <dimen name="width_40">40dp</dimen>
     <dimen name="width_50">50dp</dimen>
@@ -59,8 +61,10 @@
 
     <!-- HEIGHT -->
     <dimen name="height_0">0dp</dimen>
+    <dimen name="height_20">20dp</dimen>
     <dimen name="height_25">25dp</dimen>
     <dimen name="height_30">30dp</dimen>
+    <dimen name="height_35">35dp</dimen>
     <dimen name="height_40">40dp</dimen>
     <dimen name="height_50">50dp</dimen>
     <dimen name="height_60">60dp</dimen>
@@ -75,6 +79,7 @@
     <dimen name="height_210">210dp</dimen>
     <dimen name="height_250">250dp</dimen>
     <dimen name="height_300">300dp</dimen>
+    <dimen name="height_320">320dp</dimen>
     <dimen name="height_350">350dp</dimen>
     <dimen name="height_400">400dp</dimen>
 
