--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
 
-<!--    <style name="Theme.FCBMobile.SplashScreen" parent="Theme.SplashScreen">-->
-<!--        <item name="windowSplashScreenBackground">@color/color_primary</item>-->
-<!--        <item name="android:windowSplashScreenBackground" tools:targetApi="s">@color/color_primary</item>-->
-<!--        <item name="windowSplashScreenAnimatedIcon">@drawable/first_center_splash_logo</item>-->
-<!--        <item name="windowSplashScreenAnimationDuration">500</item>-->
-<!--&lt;!&ndash;                <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">@drawable/ic_vale_website_logo</item>&ndash;&gt;-->
-<!--        <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="s">300</item>-->
-<!--        <item name="postSplashScreenTheme">@style/Theme.FCBMobile.DayNight</item>-->
+    <style name="Theme.UI.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/color_primary</item>
+        <item name="android:windowSplashScreenBackground" tools:targetApi="s">@color/color_primary</item>
+        <item name="windowSplashScreenAnimationDuration">500</item>
+        <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="s">300</item>
+        <item name="postSplashScreenTheme">@style/Theme.DayNight</item>
 
-<!--    </style>-->
+    </style>
 
 
     <style name="Theme.DayNight" parent="Theme.MainTheme">
@@ -57,6 +55,10 @@
         <item name="textAppearanceSubtitle2">@style/TextAppearance.SubTitle2</item>
 <!--        <item name="textAppearanceCaption">@style/TextAppearance.FCBMobile.Caption</item>-->
 
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowEnterTransition">@transition/expand_transition</item>
+        <item name="android:windowExitTransition">@transition/expand_transition</item>
+
     </style>
 
 
@@ -73,14 +75,6 @@
         <item name="cornerSizeBottomLeft">@dimen/radius_0</item>
     </style>
 
-    <style name="Theme.App.DatePicker" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
-        <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="titleTextColor">@color/white</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.App.SmallComponent</item>
-        <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.App.MediumComponent</item>
-    </style>
 
     <style name="ShapeAppearance.App.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
@@ -91,31 +85,6 @@
     </style>
 
 
-    <style name="Theme.AlertDialog" parent="Theme.AppCompat.Dialog.Alert">
-        <item name="android:windowBackground">@color/transparent</item>
-        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
-    </style>
-
-    <style name="Theme.CustomTabLayout" parent="Widget.MaterialComponents.TabLayout">
-        <item name="textAllCaps">false</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textSize">@dimen/body_text_size_16</item>
-        <item name="fontFamily">@font/fira_sans_semi_bold</item>
-        <item name="android:fontFamily">@font/fira_sans_semi_bold</item>
-        <item name="lineHeight">@dimen/line_height_18</item>
-        <item name="fontWeight">@integer/font_weight_400</item>
-    </style>
-
-    <style name="Theme.BankListDialog" parent="Theme.MainTheme">
-        <item name="android:statusBarColor">@color/white</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
-        <item name="fontFamily">@font/fira_sans_semi_bold</item>
-        <item name="android:fontFamily">@font/fira_sans_semi_bold</item>
-        <item name="buttonTint">@color/color_primary</item>
-    </style>
 
 
     <style name="Theme.ChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
@@ -126,11 +95,34 @@
 <!--        <item name="chipIconTint">@color/black</item>-->
         <item name="cornerSize">0dp</item>
         <item name="cornerRadius">0dp</item>
-        <item name="checkedIcon">@drawable/check</item>
+        <item name="checkedIcon">@drawable/check_mark</item>
         <item name="chipStartPadding">10dp</item>
         <item name="chipEndPadding">10dp</item>
 <!--        <item name="android:textColor">@color/white</item>-->
 
+    </style>
+
+
+    <style name="Widget.CustomTabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/caption_text_size_12_dp</item>
+        <item name="fontFamily">@font/fira_sans_medium</item>
+        <item name="android:fontFamily">@font/fira_sans_medium</item>
+        <item name="fontWeight">@integer/font_weight_400</item>
+    </style>
+
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="queryHint">@string/enter_receipt_number</item>
+        <item name="android:fontFamily">@font/fira_sans_medium</item>
+        <item name="android:textSize">@dimen/caption_text_size_12_dp</item>
+        <item name="textColorSearchUrl">@color/search_text_color</item>
+        <item name="textFillColor">@color/color_primary</item>
+        <item name="queryBackground">@drawable/search_bar_background</item>
+        <item name="android:background">@drawable/search_bar_background</item>
+        <item name="iconifiedByDefault">false</item>
+        <item name="iconTint">@color/color_primary</item>
     </style>
 
 
