--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,8 +31,10 @@
                     app:layout_constraintVertical_bias="0.0">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/contentSlide"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:background="@color/color_primary">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/topInfoDash"
@@ -305,6 +307,7 @@
                                 </LinearLayout>
 
                                 <ImageView
+                                    android:id="@+id/driveSlide"
                                     android:layout_width="30dp"
                                     android:layout_height="30dp"
                                     android:layout_gravity="center_vertical"
