--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -91,14 +91,11 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="checkedIconEnabled">true</item>
-<!--        <item name="android:checkable">true</item>-->
-<!--        <item name="chipIconTint">@color/black</item>-->
         <item name="cornerSize">0dp</item>
         <item name="cornerRadius">0dp</item>
         <item name="checkedIcon">@drawable/check_mark</item>
         <item name="chipStartPadding">10dp</item>
         <item name="chipEndPadding">10dp</item>
-<!--        <item name="android:textColor">@color/white</item>-->
 
     </style>
 
@@ -116,11 +113,12 @@
     <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
         <item name="queryHint">@string/enter_receipt_number</item>
         <item name="android:fontFamily">@font/fira_sans_medium</item>
-        <item name="android:textSize">@dimen/caption_text_size_12_dp</item>
+        <item name="android:textSize">@dimen/caption_text_size_12</item>
         <item name="textColorSearchUrl">@color/search_text_color</item>
         <item name="textFillColor">@color/color_primary</item>
         <item name="queryBackground">@drawable/search_bar_background</item>
         <item name="android:background">@drawable/search_bar_background</item>
+        <item name="closeIcon">@null</item>
         <item name="iconifiedByDefault">false</item>
         <item name="iconTint">@color/color_primary</item>
     </style>
